<resources>
    <string name="app_name">Snap App</string>
    <string name="account_name_text">Harpal Singh</string>
    <string name="author_name">Harpal Singh</string>
    <string name="facebook">Facebook</string>
    <string name="callUs">Call Now</string>
    <string name="linkedin">LinkedIn</string>
    <string name="email">Email</string>
    <string name="name_lable">Author</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_snap_detail">SnapDetailActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="something_went_wrong">Something Went Wrong Please Try Again</string>
    <string name="oh_no">Oh No!</string>
    <string name="retry">Retry</string>
    <string name="splash_image">Splash screen image</string>
    <string name="disconnected">When Wifi is not connected</string>
    <string name="placeholder">Place holder for image</string>
    <string name="unsplash_image">Main image from unsplash api</string>
    <string name="profile_image">profile image of harpal singh</string>
    <string name="user_image">User image</string>
    <string name="home">Home</string>
    <string name="collections">Collections</string>
    <string name="search">Search</string>
</resources>
