<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">


        <item
            android:id="@+id/home"
            android:title="@string/home" />

        <item
            android:id="@+id/collections"
            android:title="@string/collections" />

        <item
            android:id="@+id/search"
            android:title="@string/search" />

        <item
            android:id="@+id/facebook"
            android:title="@string/facebook" />
        <item
            android:id="@+id/call"
            android:title="@string/callUs" />
        <item
            android:id="@+id/linkedIn"
            android:title="@string/linkedin" />
        <item
            android:id="@+id/email"
            android:title="@string/email" />
    </group>
</menu>